--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "My Chrome Extension",
+  "name": "fosbunny flop",
   "version": "1.0",
   "description": "A basic Chrome extension.",
   "permissions": ["activeTab", "storage", "tabs"],
